# shoobx.mocks3

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  s3-test.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
config/: docker.cfg  mocks3.cfg  uwsgi.ini
scripts/: performance.py  subunit2junit.py  subunit2pyunit.py
src/shoobx/mocks3/: __init__.py  config.py  models.py  responses.py  run.py  urls.py  wsgi.py
src/shoobx/mocks3/tests/: test_config.py  test_s3.py  test_s3_boto3.py
